Added (proper) SkillsPro support